Make changes to re-align styling

--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/payment/case-payment-history-viewer-field.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/payment/case-payment-history-viewer-field.html
@@ -1,6 +1,10 @@
-<cut-alert type="information">
-    <ng-container >{{ 'Recent payments may take a few minutes to reflect here.' | rpxTranslate }}</ng-container>
-</cut-alert>
+<div class="govuk-warning-text">
+    <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
+    <strong class="govuk-warning-text__text">
+        <span class="govuk-warning-text__assistive">{{'Warning' | rpxTranslate}}</span>
+        {{PAYMENT_HISTORY_WARNING | rpxTranslate}}
+    </strong>
+</div>
 <ccpay-payment-lib
     [API_ROOT]="getBaseURL()"
     [CCD_CASE_NUMBER]="caseReference"
