--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/address/write-address-field.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/address/write-address-field.html
@@ -9,7 +9,9 @@
       <span class="error-message" *ngIf="missingPostcode">{{errorMessage | rpxTranslate}}</span>
       <input type="text" [ngClass]="{'govuk-input--error': missingPostcode}"
       [id]="createElementId('postcodeInput')" name="postcode" class="form-control postcodeinput inline-block" [formControl]="postcode">
-      <button type="button" class="button button-30" (click)="findAddress()">{{'Find address' | rpxTranslate}}</button>
+      <button type="button" class="button button-30" (click)="findAddress()" [disabled]="loadingAddresses">
+        {{(loadingAddresses ? 'Finding addresses...' : 'Find address') | rpxTranslate}}
+      </button>
     </div>
 
     <div class="form-group" *ngIf="addressOptions" id="selectAddress" [ngClass]="{'form-group-error': noAddressSelected}">
