--- a/projects/ccd-case-ui-toolkit/src/lib/components/form/date-input/date-input.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/components/form/date-input/date-input.html
@@ -68,7 +68,7 @@
   </div>
 
   <div class="form-group form-group-minute" *ngIf="isDateTime">
-    <span class="form-label" [attr.id]="'minute-label-'+ hourId()">{{'Minute' | rpxTranslate}}</span>
+    <span class="form-label" [attr.id]="'minute-label-'+ minuteId()">{{'Minute' | rpxTranslate}}</span>
     <input #minuteInput
            class="form-control"
            [id]="minuteId()"
