Add payment history message (#2022)
* Add payment history message

* Add tag

* Make changes to re-align styling

* version updated

* cve

---------

Co-authored-by: RiteshHMCTS <74713687+RiteshHMCTS@users.noreply.github.com>
Co-authored-by: RiteshHMCTS <ritesh.dsouza@hmcts.net>

--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/payment/case-payment-history-viewer-field.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/payment/case-payment-history-viewer-field.html
@@ -1,3 +1,10 @@
+<div class="govuk-warning-text">
+    <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
+    <strong class="govuk-warning-text__text">
+        <span class="govuk-warning-text__assistive">{{'Warning' | rpxTranslate}}</span>
+        {{PAYMENT_HISTORY_WARNING | rpxTranslate}}
+    </strong>
+</div>
 <ccpay-payment-lib
     [API_ROOT]="getBaseURL()"
     [CCD_CASE_NUMBER]="caseReference"
