--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/case-editor/case-edit/case-edit.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/case-editor/case-edit/case-edit.component.html
@@ -4,6 +4,7 @@
   <div class="refresh-modal">
     <h2 class="heading-h2">Page refreshed</h2>
     <p>{{ 'As the page has been refreshed mandatory data is now missing. You will be redirected to the first page of this event.' }}</p>
-    <button class="button" (click)="onRefreshModalOk()">OK</button>
+    <p>{{ 'Please select Ok to continue.' }}</p>
+    <button class="button" (click)="onRefreshModalOk()">Ok</button>
   </div>
 </div>
