--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/query-management/components/query-confirmation/query-confirmation.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/query-management/components/query-confirmation/query-confirmation.component.html
@@ -4,15 +4,18 @@
       <ng-container *ngIf="queryCreateContext === queryCreateContextEnum.NEW_QUERY || queryCreateContext === queryCreateContextEnum.FOLLOWUP">
         <div class="govuk-panel govuk-panel--confirmation">
 
-          @if (isHmctsStaffRaisedQuery?.toLowerCase() === 'yes') {
+          @if (isHmctsStaffRaisedQuery?.toLowerCase() === 'yes' && queryCreateContext === queryCreateContextEnum.FOLLOWUP) {
               <h1 class="govuk-panel__title">{{'Query response submitted' | rpxTranslate}}</h1>
               <div class="govuk-panel__body">{{'This query response has been added to the case' | rpxTranslate}}</div>
-          } @else {
+          } @else if (isHmctsStaffRaisedQuery?.toLowerCase() === 'yes' && queryCreateContext === queryCreateContextEnum.NEW_QUERY) {
               <h1 class="govuk-panel__title">{{'Query submitted' | rpxTranslate}}</h1>
-              <div class="qm-confirmation govuk-panel__body">
-                <ccd-markdown [content]="callbackConfirmationMessageText?.header | rpxTranslate"></ccd-markdown>
-              </div>
-            }
+              <div class="govuk-panel__body">{{'Your query has been sent.' | rpxTranslate}}</div>
+          } @else {
+            <h1 class="govuk-panel__title">{{'Query submitted' | rpxTranslate}}</h1>
+            <div class="qm-confirmation govuk-panel__body">
+              <ccd-markdown [content]="callbackConfirmationMessageText?.header | rpxTranslate"></ccd-markdown>
+            </div>
+          }
 
         </div>
         <div class="govuk-body">
