fix for document search voiceover

--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-file-view/components/case-file-view-folder/case-file-view-folder.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-file-view/components/case-file-view-folder/case-file-view-folder.component.html
@@ -1,4 +1,4 @@
-<div class="document-filter-container">
+<div class="document-filter-container" role="search">
   <div class="form-group document-filter" [formGroup]="documentFilterFormGroup">
     <input
       class="form-control document-search"
@@ -6,8 +6,7 @@
       id="document-search"
       name="documentSearchFormControl"
       formControlName="documentSearchFormControl"
-      placeholder="Search by document name"
-      aria-label="Search by document name" />
+      placeholder="Search by document name"/>
   </div>
 </div>
 
