fix for document folder icon voiceover

--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-file-view/components/shared/case-file-view-overlay-menu/case-file-view-overlay-menu.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-file-view/components/shared/case-file-view-overlay-menu/case-file-view-overlay-menu.component.html
@@ -1,8 +1,11 @@
 <div>
-  <button type="button" class="overlay-toggle"
+  <button type="button"
+          class="overlay-toggle"
           (click)="$event.stopPropagation(); setOpen()"
-          cdkOverlayOrigin #trigger="cdkOverlayOrigin">
-    <ng-content select="[trigger]"></ng-content>
+          cdkOverlayOrigin #trigger="cdkOverlayOrigin"
+          aria-haspopup="true"
+          [attr.aria-expanded]="isOpen">
+    <ng-content select="[trigger]" aria-hidden="true"></ng-content>
   </button>
 
   <ng-template
