fix for documents folder header voiceover

--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-file-view/components/case-file-view-folder/case-file-view-folder.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-file-view/components/case-file-view-folder/case-file-view-folder.component.html
@@ -11,8 +11,14 @@
 </div>
 
 <div class="document-folders-header">
-  <div class="document-folders-header__title">Documents ({{ documentCount }})</div>
-  <div class="document-folders-header__flex">
+  <div class="document-folders-header__title" id="document-folders-header-title">
+    Documents ({{ documentCount }})
+  </div>
+  <div
+    class="document-folders-header__flex"
+    role="group"
+    aria-label="Document list controls"
+    aria-describedby="document-folders-header-title">
     <ccd-case-file-view-folder-toggle
       (expandAll)="expandAll($event)"
       (collapseAll)="collapseAll($event)">
