fix for missing alt tag

--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-file-view/components/case-file-view-folder/case-file-view-folder.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-file-view/components/case-file-view-folder/case-file-view-folder.component.html
@@ -58,7 +58,7 @@
           <div class="node__icon" disabled aria-hidden="true">
             <img src="/assets/img/case-file-view/case-file-view-document.svg"
               class="node__iconImg"
-              alt=""
+              alt="Document icon"
               aria-hidden="true"
             />
           </div>
