--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/query-management/components/query-details/query-details.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/query-management/components/query-details/query-details.component.html
@@ -15,7 +15,7 @@
       </tr>
       <tr class="govuk-table__row">
         <th scope="row" class="govuk-table__header">{{ 'Last submitted by' | rpxTranslate }}</th>
-        <td class="govuk-table__cell">{{ query.lastSubmittedBy }}</td>
+        <td class="govuk-table__cell">{{ query.lastSubmittedBy }} @if (query?.isHmctsStaff?.toLowerCase() === 'yes') { - {{ hmctsStaff }} }</td>
       </tr>
       <tr class="govuk-table__row">
         <th scope="row" class="govuk-table__header">{{ 'Submission date' | rpxTranslate }}</th>
