--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/query-management/components/query-confirmation/query-confirmation.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/query-management/components/query-confirmation/query-confirmation.component.html
@@ -25,7 +25,7 @@
         </div>
         <div class="govuk-body">
           {{'You can' | rpxTranslate}}
-          <a class="govuk-link" id="tasks-link" routerLink="/cases/case-details/{{jurisdiction}}/{{caseType}}/{{caseId}}/tasks">{{'return to tasks' | rpxTranslate}}</a> or
+          <a class="govuk-link" id="tasks-link" routerLink="/cases/case-details/{{jurisdiction}}/{{caseType}}/{{caseId}}#Tasks">{{'return to tasks' | rpxTranslate}}</a> or
           <a class="govuk-link" id="case-link" routerLink="/cases/case-details/{{jurisdiction}}/{{caseType}}/{{caseId}}">{{'Go back to the case' | rpxTranslate}}</a>
         </div>
       </ng-container>
