--- a/storybook/assets/sass/jui/all.scss
+++ b/storybook/assets/sass/jui/all.scss
@@ -8,13 +8,13 @@
 // TODO REMOVE THIS WHEN UX VERSION GETS BUMPED UP OR WHEN MENU COMPONENT IS DONE INSTEAD
 // DOTO NEEDS TO BE REMOVED
 .hmcts-page-heading__title-wrapper {
-    @include mq($from: tablet) {
+    @media screen and (min-width: 641px) {
         float: left;
     }
 }
 
 .hmcts-page-heading__actions-wrapper {
-    @include mq($from: tablet) {
+    @media screen and (min-width: 641px) {
         float: right;
     }
 }
