--- a/storybook/assets/sass/jui/settings/_settings.general.scss
+++ b/storybook/assets/sass/jui/settings/_settings.general.scss
@@ -14,21 +14,17 @@ $jui-assets-path : "/public/images/";
   margin-right: auto;
   max-width: $jui-page-width;
 
-  @include govuk-if-ie8 {
-    width: $jui-page-width;
-  }
-
   // On mobile, add half width gutters
   margin: 0 $jui-gutter-half;
 
   // On tablet, add full width gutters
-  @include mq($from: tablet) {
+  @media screen and (min-width: 641px) {
     margin: 0 $jui-gutter;
   }
 
   // As soon as the viewport is greater than the width of the page plus the
   // gutters, just centre the content instead of adding gutters.
-  @include mq($and: "(min-width: #{($jui-page-width + $jui-gutter * 2)})") {
+  @media screen and (min-width: #{($jui-page-width + $jui-gutter * 2)}) {
     margin: 0 auto;
   }
 }
