Make changes to remove innerHTML

--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-flag/components/manage-case-flags/manage-case-flags.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-flag/components/manage-case-flags/manage-case-flags.component.html
@@ -16,7 +16,7 @@
             type="radio"
             [checked]="isSelected(flagDisplay)"
             (change)="onFlagSelectionChange(flagDisplay)"/>
-          <label class="govuk-label govuk-radios__label" for="flag-selection-{{i}}" [innerHtml]="flagDisplay | manageCaseFlagsLabelDisplay"></label>
+          <label class="govuk-label govuk-radios__label" for="flag-selection-{{i}}">{{ flagDisplay | manageCaseFlagsLabelDisplay }}</label>
         </div>
       </div>
     </fieldset>
